--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -1600,12 +1600,12 @@
    "source": [
     "## Заключение\n",
     "\n",
-    "`python` активно развивается. Из основных новшеств - это добавление спецификаций типов в объявления переменных (везде, где они объявляются). Мы пока это не используем, чтобы не усложнять код. Но выглядит это вот так (хотите - пользуйтесь):"
+    "`python` активно развивается. Из основных новшеств - это добавление спецификаций типов в объявления переменных (везде, где они объявляются). Мы пока это не используем, чтобы не усложнять код. Но выглядит это вот так (хотите - пользуйтесь, но потом не жалуйтесь:)). Учтите, эти подсказки по типам, в `python 3.6` на самом деле ни на что не влияют."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
        "(None, 0, 1)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,6 +1626,26 @@
     "    return None\n",
     "\n",
     "example(), example(0), example(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2a3a'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example(\"2a\", \"3a\")"
    ]
   }
  ],
