day 1 block 6 tdb stub

--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -2509,6 +2509,22 @@
     "1. Процесс CRISP-DM не гарантирует качественной модели, но без него вы точно её не получите,\n",
     "2. Модели имеет смысл кросс-валидировать, чтобы использовать все доступные данные. Часто это используют при отборе гиперпараметров - в нашем случае это число ближайших соседей. Но об этом будет еще в нашем курсе позже."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.6 Обзор всего курса на примерах предсказаний"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to be done - когда будет весь курс"
+   ]
   }
  ],
  "metadata": {
