conclusion some at last

--- a/day_2.ipynb
+++ b/day_2.ipynb
@@ -3077,7 +3077,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Здесь мы видим, как нейросетью можно разграничить классы датасета Iris."
+    "Здесь мы видим, как нейросетью можно разграничить классы датасета Iris.\n",
+    "\n",
+    "## Небольшое заключение\n",
+    "\n",
+    "Несмотря на то, что сети универсальны, при добавлении одного признака, они требуют в квадрат больше примеров - ввиду своей как раз универсальности. Для табличных данных все же очень хорошо работают и другие алгоритмы в сочетании с `feature engineering`. Его же никто не запрещает использовать и для нейросетей."
    ]
   }
  ],
