--- a/day_2.ipynb
+++ b/day_2.ipynb
@@ -2978,7 +2978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Что такое `PowerTransform`? Помните как мы подбирали третью степень для длины и веса? `PowerTransform` подбирает для одно величины степень так, чтобы её распределение было как можно более близко к нормальному."
+    "Что такое `PowerTransform`? Помните как мы подбирали третью степень для длины и веса? `PowerTransform` подбирает для одной величины степенное преобразование так, чтобы её распределение было как можно более близко к нормальному."
    ]
   },
   {
