--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -1020,7 +1020,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "С сандалями разобрались, а вот штаны оказались футболкой. Что ж, такие вот на wildberries штаны (хотя на самом деле они не по центру фото). Я скачал еще классические мужские брюки и отцентрировал их.\n",
+    "С сандалями разобрались, а вот штаны оказались рубашкой. Что ж, такие вот на wildberries штаны (хотя на самом деле они не по центру фото). Я скачал еще классические мужские брюки и отцентрировал их.\n",
     "\n",
     "![Test 3](media/test_3.jpg)"
    ]
