--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Помните, для градиентного спуска мы искали производную по каждому параметру? То же делает и библиотека `tensorflow` (от Google), только она дифференцирует по параметрам автоматически вместо нас (благодаря особой математике на графах операций). `keras` - это надстройка над библиотекой `tensorflow`, позволяющая конструировать различные нейросети, и искать с заданной функцией ошибки её минимум.\n",
     "\n",
-    "Библиотека `scikit-learn` в отличие от `keras`, работает только с полносвязными сетями, и не позволяет произвольно настраивать эту функцию ошибки. **Функция ошибкия является спецификацией задачи нейросети** - это означает что архитектурно одна и та же сеть может может подстраивать свои параметры под разные задачи. \n",
+    "Библиотека `scikit-learn` в отличие от `keras`, работает только с полносвязными сетями, и не позволяет произвольно настраивать эту функцию ошибки. **Функция ошибки является спецификацией задачи нейросети** - это означает что архитектурно одна и та же сеть может может подстраивать свои параметры под разные задачи. \n",
     "\n",
     "Помимо упомянутого `Dense`-слоя, существуют следующие слои:\n",
     "1. Свёрточные (`Convolution`) - применяются обычно для обработки изображений. Они пробегают некоторым окном по всем входным признакам, и вычисляют *свертку* - некоторую функцию с весами сразу над несколькими признаками. Это мало того что позволяет сократить количество весов, но и конструировать новые (внутри сети) признаки.\n",
@@ -1566,6 +1566,126 @@
     "\n",
     "plt.title('Bounding box')\n",
     "plt.imshow(result, cmap='gray');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.4 Готовые нейросети для работы с изображениями\n",
+    "\n",
+    "Существует ряд архитектур глубоких нейронных сетей для классификации изображений. Как правило, чем больше в сети весов, тем она точнее, но тем дольше она делает своё предсказание. Также существует и датасет [Imagenet](http://www.image-net.org/) с несколькими миллионами размеченных по классам изображений.\n",
+    "\n",
+    "В `keras` доступен ряд претренированных на Imagenet сетей. Пользоваться ими достаточно просто, но учтите что первый запуск эти самые веса будут скачиваться (несколько десятков-сотен мегабайт).\n",
+    "\n",
+    "Посмотрим, что нам скажет сеть NASNetMobile (одна из самых легких) на вот такое изображение.\n",
+    "\n",
+    "![Scared_Cat](media/white_cat.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.applications import NASNetMobile\n",
+    "from keras.applications.nasnet import preprocess_input, decode_predictions\n",
+    "\n",
+    "nasnet = NASNetMobile(weights=\"imagenet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class, Description, Probability\n",
+      "('n02123394', 'Persian_cat', 0.09109089)\n",
+      "('n02124075', 'Egyptian_cat', 0.07756926)\n",
+      "('n02123597', 'Siamese_cat', 0.0772175)\n",
+      "('n02127052', 'lynx', 0.06468712)\n",
+      "('n03930313', 'picket_fence', 0.05027819)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_image = np.array(Image.open('media/white_cat.jpg').resize((224, 224)))\n",
+    "cat_image = preprocess_input(np.asarray([cat_image]))\n",
+    "\n",
+    "cat_image_prediction = nasnet.predict(cat_image)\n",
+    "print(\"Class, Description, Probability\")\n",
+    "for cat_prediction in decode_predictions(cat_image_prediction, top=5)[0]:\n",
+    "    print(cat_prediction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Что ж, видим что сеть хоть и не очень уверена в предсказании, класс фото с кошкой она всё же определила. \n",
+    "\n",
+    "Существуют готовые сети и для детекции объектов - которые выделяют рамкой (*bounding box*) объект (то есть решается задача регрессии для координат) и определяют его класс. Одну такую - **YOLO** (you look only once) - мы сейчас и рассмотрим. Она, в свою очередь, обучена уже на другом датасете, который называется [COCO](https://cocodataset.org/).\n",
+    "\n",
+    "Для использования YOLO нам понадобится пакет `yolov4` (и веса сети размером около 260 Мб, которые нужно скачать по ссылке из [описания пакета](https://pypi.org/project/yolov4/)). Мы так же должны создать (или отредактировать) файл *coco.names*, содержащий те наименования классов датасета COCO, которые мы хотим распознавать (изначально их порядка 80)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from yolov4.tf import YOLOv4\n",
+    "\n",
+    "yolo = YOLOv4()\n",
+    "\n",
+    "yolo.classes = \"data/coco.names\"\n",
+    "\n",
+    "yolo.make_model()\n",
+    "yolo.load_weights(\"D:/Downloads/yolov4.weights\", weights_type=\"yolo\")\n",
+    "\n",
+    "predicted = yolo.predict(np.array(Image.open(\"media/white_cat.jpg\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bounding box: [0.62285298 0.50038516 0.71442688 0.96491622]\n",
+      "Class: cat\n",
+      "Probability: 0.9789\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('data/coco.names', 'r') as fd:\n",
+    "    yolo_classes = fd.read().split('\\n')\n",
+    "\n",
+    "for detection in predicted:\n",
+    "    print(\"Bounding box:\", detection[:4])\n",
+    "    print(\"Class:\", yolo_classes[int(detection[4])])\n",
+    "    print(\"Probability: %.4f\" % detection[5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Заключение\n",
+    "\n",
+    "Это вообще замечательно, когда есть готовые нейросети. Их даже можно дообучать (*fine-tuning*). В случае с `keras`, \"замораживаются\" веса на нескольких начальных слоях, и сеть нужно дообучить сеть под свой датасет (тут на самом деле надо знать что \"морозить\"). В случае же с YOLO есть свои инструкции (тоже не самые простые).\n",
+    "\n",
+    "Готовые сети позволяют делать готовые приложения, и особенно в тех случаях, когда нет своего датасета. Можно же не распознавать котиков, а, например, только машины. Что с ними сдетектированными делать - это уже зависит только от разбега фантазии."
    ]
   }
  ],
