--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -1654,14 +1654,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bounding box: [0.62285298 0.50038516 0.71442688 0.96491622]\n",
+      "Bounding box (center x, center y, width, height): [0.62285298 0.50038516 0.71442688 0.96491622]\n",
       "Class: cat\n",
       "Probability: 0.9789\n"
      ]
@@ -1672,7 +1672,7 @@
     "    yolo_classes = fd.read().split('\\n')\n",
     "\n",
     "for detection in predicted:\n",
-    "    print(\"Bounding box:\", detection[:4])\n",
+    "    print(\"Bounding box (center x, center y, width, height):\", detection[:4])\n",
     "    print(\"Class:\", yolo_classes[int(detection[4])])\n",
     "    print(\"Probability: %.4f\" % detection[5])"
    ]
@@ -1686,6 +1686,23 @@
     "Это вообще замечательно, когда есть готовые нейросети. Их даже можно дообучать (*fine-tuning*). В случае с `keras`, \"замораживаются\" веса на нескольких начальных слоях, и сеть нужно дообучить сеть под свой датасет (тут на самом деле надо знать что \"морозить\"). В случае же с YOLO есть свои инструкции (тоже не самые простые).\n",
     "\n",
     "Готовые сети позволяют делать готовые приложения, и особенно в тех случаях, когда нет своего датасета. Можно же не распознавать котиков, а, например, только машины. Что с ними сдетектированными делать - это уже зависит только от разбега фантазии."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.5 Тексты и нейросети\n",
+    "\n",
+    "Вот и подобрались к работе с текстами. Здесь мы будем рассматривать только готовые и очень \"толстые\" сети. В частности `Google BERT` (*Bidirectional Encoder Representations from Transformers*).\n",
+    "\n",
+    "`BERT` имеет очень большой размер, и был обучен на текстах Википедии решать две задачи:\n",
+    "1. Предсказывать пропущенные слова в тексте: \"я пошел в ? и купил ?\" - \"я пошел в магазин и купил молоко\",\n",
+    "2. Предсказывать, является ли текст продолжением некоторого начала: \"я пошел в магазин -- и купил молоко\" (ok) и \"я пошел в магазин -- и пингвины не летают\" (fail).\n",
+    "\n",
+    "У `BERT` для 2018 года была достаточно инновационная архитектура, в частности использовался *Attention* (механизм внимания) - это когда накапливается информация о последовательных данных (словах). Основное что может `BERT` - это выдать репрезентацию, или вложение слов в векторное пространство, с которым можно работать. Так же `BERT` доучивают под специфические задачи, но это достаточно ресурсозатратное мероприятие (не формата компьютера вида ноутбук).\n",
+    "\n",
+    "Давайте посмотрим на примерах что может `BERT`."
    ]
   }
  ],
