day 4 block 5 (texts)

--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -1702,7 +1702,306 @@
     "\n",
     "У `BERT` для 2018 года была достаточно инновационная архитектура, в частности использовался *Attention* (механизм внимания) - это когда накапливается информация о последовательных данных (словах). Основное что может `BERT` - это выдать репрезентацию, или вложение слов в векторное пространство, с которым можно работать. Так же `BERT` доучивают под специфические задачи, но это достаточно ресурсозатратное мероприятие (не формата компьютера вида ноутбук).\n",
     "\n",
-    "Давайте посмотрим на примерах что может `BERT`."
+    "Модель `BERT` можно предварительно [скачать](https://github.com/google-research/bert/blob/master/multilingual.md), но и `deeppavlov` это умеет сам.\n",
+    "\n",
+    "Особенность ряда предобученных вариантов `BERT` - мультиязычность, то есть поддержка сразу около 100 языков \"из коробки\". Давайте посмотрим на примерах что может `BERT`, и будем делать это с помощью библиотеки `deeppavlov`, созданной в МФТИ.\n",
+    "\n",
+    "> **Attention!** Для deeppavlov требуется `tensorflow==1.15.2`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "tf.get_logger().setLevel('ERROR')\n",
+    "\n",
+    "from deeppavlov.core.common.file import read_json\n",
+    "from deeppavlov import build_model, configs\n",
+    "\n",
+    "bert_config = read_json(configs.embedder.bert_embedder)\n",
+    "bert_config['metadata']['variables']['BERT_PATH'] = 'd:/workspace/bert/bert-base-multilingual-cased/'\n",
+    "\n",
+    "bert = build_model(bert_config)\n",
+    "\n",
+    "texts = ['Привет, я предложение.', 'Hello, I\\'am a sentence too.', 'Тут случайно что-то написано.']\n",
+    "tokens, token_embeddings, subtokens, subtoken_embs, sent_max_embs, sentence_mean_embeddings, bert_pooler_outputs = bert(texts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Нас будут интересовать `token_embeddings` и `sentence_mean_embeddings`, а точнее косинусное расстояние между ними."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((5, 768), (768,))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token_embeddings[0].shape, sentence_mean_embeddings[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Для первого слова!\n",
+      "Привет Привет 1.000\n",
+      "Привет Hello 0.447\n",
+      "Hello Тут 0.354\n",
+      "Привет Тут 0.379\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "print(\"Для первого слова!\")\n",
+    "print(tokens[0][0], tokens[0][0], \"%.3f\" % cosine_similarity([token_embeddings[0][0]], [token_embeddings[0][0]]))\n",
+    "print(tokens[0][0], tokens[1][0], \"%.3f\" % cosine_similarity([token_embeddings[0][0]], [token_embeddings[1][0]]))\n",
+    "print(tokens[1][0], tokens[2][0], \"%.3f\" % cosine_similarity([token_embeddings[1][0]], [token_embeddings[2][0]]))\n",
+    "print(tokens[0][0], tokens[2][0], \"%.3f\" % cosine_similarity([token_embeddings[0][0]], [token_embeddings[2][0]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Как можно заметить, результат зависит от контекста."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Средние вложения для предложений\n",
+      "Привет, я предложение. Привет, я предложение. 1.000\n",
+      "Привет, я предложение. Hello, I'am a sentence too. 0.579\n",
+      "Hello, I'am a sentence too. Тут случайно что-то написано. 0.484\n",
+      "Привет, я предложение. Тут случайно что-то написано. 0.522\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Средние вложения для предложений\")\n",
+    "print(texts[0], texts[0], \"%.3f\" % cosine_similarity([sentence_mean_embeddings[0]], [sentence_mean_embeddings[0]]))\n",
+    "print(texts[0], texts[1], \"%.3f\" % cosine_similarity([sentence_mean_embeddings[0]], [sentence_mean_embeddings[1]]))\n",
+    "print(texts[1], texts[2], \"%.3f\" % cosine_similarity([sentence_mean_embeddings[1]], [sentence_mean_embeddings[2]]))\n",
+    "print(texts[0], texts[2], \"%.3f\" % cosine_similarity([sentence_mean_embeddings[0]], [sentence_mean_embeddings[2]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Косинусное расстояние это мера угла от -1 (противоположные вектора) до +1 (сонаправленные). Почему косинусное расстояние? Чтобы не влияло количество слов. Если вектора преобразовать (разделить на их евклидову длину) - то косинусное расстояние будет выражаться через евклидово расстояние векторов."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Неотнормированные вектора Привет, я предложение. Hello, I'am a sentence too. euclidean 10.715\n",
+      "Нормированные вектора Привет, я предложение. Hello, I'am a sentence too. euclidean 0.917, cosine 0.579\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "\n",
+    "print('Неотнормированные вектора', texts[0], texts[1], \"euclidean %.3f\" % euclidean_distances([sentence_mean_embeddings[0]], [sentence_mean_embeddings[1]]))\n",
+    "\n",
+    "print('Нормированные вектора', texts[0], texts[1], \"euclidean %.3f, cosine %.3f\" % (euclidean_distances(\n",
+    "    [sentence_mean_embeddings[0] / (sum(sentence_mean_embeddings[0] ** 2) ** 0.5)],\n",
+    "    [sentence_mean_embeddings[1] / (sum(sentence_mean_embeddings[1] ** 2) ** 0.5)]\n",
+    "), (1 - 0.5 * euclidean_distances(\n",
+    "    [sentence_mean_embeddings[0] / (sum(sentence_mean_embeddings[0] ** 2) ** 0.5)],\n",
+    "    [sentence_mean_embeddings[1] / (sum(sentence_mean_embeddings[1] ** 2) ** 0.5)]\n",
+    ") ** 2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Что из этого важно, так это то что близкие по смыслу предложения имеют более близкое к 1 расстояние. На этом можно строить кластеризацию, классификаторы даже без *fine-tuning* `BERT`. Кроме `BERT` существует еще одна модель от Google: `USE` (*Universal Sentence Encoder*), которая построена на тех же принципах, но уже работает с предложениями.\n",
+    "\n",
+    "> Если необходимо работать со смыслом предложений, рекомендую пакет `sentence-transformers`, в нём есть дистиллированная многоязычная модель `USE`.\n",
+    "> Дистиллированная - это значит обучена более легкая модель, которая предсказывает то же, что и оригинальная (обычно качество у них чуть хуже, но зато скорость выше и размер ниже).\n",
+    "\n",
+    "Но мы даже с помощью `BERT` - благодаря идее ближайших - сможем построить простого вопросно-ответного бота."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question_answers = [\n",
+    "    ('Кто первым полетел в космос?', 'Юрий Гагарин'),\n",
+    "    ('Кто был первым президентом России?', 'Михаил Горбачев'),\n",
+    "    ('Зачем автомобилю руль?', 'Чтобы водитель мог поворачивать')\n",
+    "]\n",
+    "\n",
+    "qa_vectors = [\n",
+    "    bert(question[0])[5][0].tolist() for question in question_answers\n",
+    "]\n",
+    "\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "knowledge_base = NearestNeighbors(n_neighbors=1, metric='cosine').fit(qa_vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кто был первым космонавтом? Юрий Гагарин\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = 'Кто был первым космонавтом?'\n",
+    "\n",
+    "answer_index = knowledge_base.kneighbors(\n",
+    "    [bert(question)[5][0]], return_distance=False\n",
+    ")[0][0]\n",
+    "\n",
+    "print(question, question_answers[answer_index][1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Из интересного - работа с текстом далеко не ограничивается поиском ближайших. Мы посмотрим еще две задачи - суммаризация (извлечение основного из текста) и извлечение именованных сущностей (*named entity recognition*). Первая задачу можно решить с помощью пакета `bert-extractive-summarizer`. Он для извлечения основных предложений кластеризует их все, и выбирает самые близкие к центрам кластеров."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Российский космонавт Иван Вагнер, находящийся в настоящее время на Международной космической станции (МКС),\n",
+      "сфотографировал комету C/2020 F3 (NEOWISE).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# для подгрузки произвольных моделей нужен пакет transformers\n",
+    "from transformers import AutoConfig, AutoModel, AutoTokenizer\n",
+    "\n",
+    "custom_config = AutoConfig.from_pretrained('d:/workspace/bert/bert-base-multilingual-cased/')\n",
+    "custom_config.output_hidden_states=True\n",
+    "custom_tokenizer = AutoTokenizer.from_pretrained('d:/workspace/bert/bert-base-multilingual-cased/')\n",
+    "custom_model = AutoModel.from_pretrained('d:/workspace/bert/bert-base-multilingual-cased/', config=custom_config)\n",
+    "\n",
+    "from summarizer import Summarizer\n",
+    "\n",
+    "summarizer = Summarizer(custom_model=custom_model, custom_tokenizer=custom_tokenizer)\n",
+    "\n",
+    "# https://lenta.ru/news/2020/07/04/cometa/\n",
+    "long_news_text_from_lenta_ru = \"\"\"\n",
+    "Российский космонавт Иван Вагнер, находящийся в настоящее время на Международной космической станции (МКС),\n",
+    "сфотографировал комету C/2020 F3 (NEOWISE). Он опубликовал фото на своей странице в Twitter. «На следующем витке\n",
+    "попробовал чуть ближе сфотографировать самую яркую за последние семь лет комету C/2020 F3 (NEOWISE).\n",
+    "Довольно хорошо видно ее хвост из космоса, с борта Международной космической станции!» — подписал он снимок.\n",
+    "В ближайшие дни комету можно будет увидеть с Земли в небе над северо-восточным горизонтом недалеко от созвездия Возничего.\n",
+    "Ранее Вагнер рассказал о сложностях жизни в невесомости. По его словам, самым тяжелым является «длительная изоляция в замкнутом объеме» и бытовые условия.\n",
+    "На данный момент Иван Вагнер входит в состав экипажа МКС вместе с Анатолием Иванишиным, а также астронавтами НАСА Кристофером Кэссиди, Дугласом Херли\n",
+    "и Робертом Бенкен. Они продолжают осуществлять свою экспедицию по запланированной программе.\n",
+    "\"\"\"\n",
+    "\n",
+    "summarized = summarizer(long_news_text_from_lenta_ru)\n",
+    "print(summarized)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Этот способ имеет ряд настроек (например пропорцию сокращения или минимальную длину предложения), и очень удобен для обработки длинных текстов автоматизированно.\n",
+    "\n",
+    "А вот NER есть и в уже упомянутой библиотеке `deeppavlov`, и работает он весьма интересно. Посмотрим."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-07-06 12:20:55.155 INFO in 'deeppavlov.core.data.simple_vocab'['simple_vocab'] at line 115: [loading vocabulary from C:\\Users\\Sazonov_AV\\.deeppavlov\\models\\ner_ontonotes_bert_mult\\tag.dict]\n",
+      "2020-07-06 12:21:21.777 INFO in 'deeppavlov.core.models.tf_model'['tf_model'] at line 51: [loading model from C:\\Users\\Sazonov_AV\\.deeppavlov\\models\\ner_ontonotes_bert_mult\\model]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['Российский', 'космонавт', 'Иван', 'Вагнер', ',', 'находящийся', 'в', 'настоящее', 'время', 'на', 'Международной', 'космической', 'станции', '(', 'МКС', ')', ',', 'сфотографировал', 'комету', 'C', '/', '2020', 'F3', '(', 'NEOWISE', ')', '.']], [['B-NORP', 'O', 'B-PERSON', 'I-PERSON', 'O', 'O', 'O', 'O', 'O', 'O', 'B-ORG', 'I-ORG', 'I-ORG', 'O', 'B-ORG', 'O', 'O', 'O', 'O', 'B-LOC', 'I-LOC', 'I-LOC', 'I-LOC', 'O', 'O', 'O', 'O']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ner = build_model(configs.ner.ner_ontonotes_bert_mult, download=False)\n",
+    "print(ner(['Российский космонавт Иван Вагнер, находящийся в настоящее время на Международной космической станции (МКС), сфотографировал комету C/2020 F3 (NEOWISE).']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Здесь `B` - начало токена, `I` - продолжение, `O` - не именованная сущность. `NORP` - это национальная, политическая или религиозная принадлежность, `PERSON` - имена людей, `ORG` - понятно, организации, `LOC` - местоположение, и есть и другие типы именованных сущностей (всего 18 в этой модели).\n",
+    "\n",
+    "Учтите, нельзя полагаться на NER в том смысле, что он \"точно ничего не пропустит\". Мало того что может пропустить, может еще и перепутать. Поэтому использовать его надо не на точность, а на так сказать \"ковровое покрытие\" - обрабатывать множество текстов и извлекать статистики.\n",
+    "\n",
+    "## Заключение\n",
+    "\n",
+    "Языковые модели очень тяжелые и работают достаточно долго (без подключения графических карт). Зато они могут практически чудеса, и этим надо обязательно пользоваться."
    ]
   }
  ],
